--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -22,9 +22,13 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-	font-size: 5em;
+	font-size: 3em;
 	line-height: 1.1;
 	margin: 0.25em 0;
+	
+		@media all and (min-width: $breakpoint-sml) {
+			font-size: 5em;
+		}
 }
 
 h2 {
