--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -45,3 +45,8 @@ $grid__col--width    : 65px;
 $grid__col--count    : 12;
 $grid__gutter--width : 20px;
 $grid__cont--max-w   : 1050px;
+
+// Media Query Breakpoints 
+
+$breakpoint-sml : 34em;
+$breakpoint-med : 50em;
